[package]
name = "panoptic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.30"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
sha3 = "0.10"
rand = "0.8"
statrs = "0.16"
plotters = "0.3"
